--- a/Lectures/04 Data Types/11 Escape Sequences and Raw Strings.ipynb
+++ b/Lectures/04 Data Types/11 Escape Sequences and Raw Strings.ipynb
@@ -159,6 +159,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start\tmiddle\tend\n",
+      "s\tm\te\n",
+      "n\tbdd\ta\n",
+      "sddd\tm\tr\n",
+      "sf\tmfd\te\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"start\\tmiddle\\tend\") \n",
+    "# at first \\t is 8 spaces\n",
+    "#at first start has 5 char so we need 3 more space\n",
+    "#and then middle has 6 char so we need 2 more space\n",
+    "# its GREAT for TABLES\n",
+    "print(\"s\\tm\\te\")\n",
+    "print(\"n\\tbdd\\ta\")\n",
+    "print(\"sddd\\tm\\tr\")\n",
+    "print(\"sf\\tmfd\\te\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -209,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +250,8 @@
     }
    ],
    "source": [
-    "print(r\"This is a backslash: \\\\\")"
+    "print(r\"This is a backslash: \\\\\") #nothing will translated\n",
+    "# its GREAT for FILE PATH"
    ]
   },
   {
@@ -326,7 +356,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py38",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -340,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.11.11"
   },
   "orig_nbformat": 4
  },
